Cleaned all the junk out of application.sass and moved it to the appropriate sub-stylesheet

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -235,7 +235,7 @@
   font: 24px "times new roman", times, serif
   letter-spacing: -.05em
   margin: 10px 0 15px
-  background-color: #EEEDEB
+  background-color: #F5F4F3
   +border-radius(5px)
   padding: 15px
 
