--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -1,6 +1,11 @@
 // `Header
 //----------------------------------------------------------------------------------------------------
 
+#header
+  height: 45px !important
+  border-radius: 0px !important
+  padding: 0px !important
+
 #header_outer
   padding: 0
   z-index: 901
