--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -4,6 +4,9 @@
 #main
   margin: 0
 
+#reader_header
+  display: none !important
+
 #reader_header + article
   margin-top: 0px
 
@@ -360,6 +363,10 @@ div.close_tab
 
     li.audio-disabled
       display: none
+
+article .nav_items,
+.search
+  display: none
 
 .nav_items
   width: 212px
