--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -1,3 +1,13 @@
+article > form.share .character_count
+  float: left
+  background: #fff
+  color: #a20000
+  +round
+  box-shadow: 0px 1px 0px rgba(#CCC, .5)
+  padding: 2px 5px
+  margin-top: 5px
+  font-size: 11px
+
 #modal_window,
 #modal_overlay
   display: block
