--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -1,3 +1,38 @@
+#sidebar
+  background-image: none
+  background: #EEEDEB
+  border: 0px
+  width: 100%
+  height: 100%
+  padding: 0px
+  position: absolute
+  top: -46px
+  z-index: 1005
+  margin: 0px
+
+#sidebar.open
+  display: block !important
+
+.mobile#nav_mobile nav + nav
+  margin-top: -20px
+
+.mobile #nav_mobile_sign_in a,
+.mobile #nav_mobile_sign_out a,
+.mobile #nav_mobile_sign_up a
+  padding-left: 20px
+
+.mobile #nav_mobile_sign_up
+  background-color: #0077b4
+  border: 0
+
+.mobile #nav_mobile_sign_out
+  background-color: #993300
+  border: 0
+
+.mobile #nav_mobile_sign_in
+  background-color: #555
+  border: 0
+
 #nav_mobile
   margin-bottom: -20px
   li
