--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -114,6 +114,31 @@ a.cta h3
 
 // ----------------- Reading plans
 
+article#plan-index .plan_filters,
+article#plan-index .plan_search
+  display: none
+
+article#plan-index .split_pane .sidebar
+  display: block !important
+  width: 100%
+  background: transparent
+
+article#plan-index .split_pane .sidebar dl
+  border: 0
+
+article#plan-index dd.highlighted a,
+.split_pane .sidebar dd a:hover
+  background: transparent
+
+.reading_plan_index h1
+  display: block !important
+  font-size: 32px
+  margin-top: 20px
+
+.reading_plan_index .action_button_green,
+.reading_plan_index .action_button_blue
+  width: 90%
+
 #main #subscriptions-index
 
   h1
