fix mobile bible version menu display

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -139,6 +139,8 @@
   cursor: default
   margin: 0
   width: 100%
+  @media only screen and (max-width: 768px)
+    table-layout: fixed  
 
 .dynamic_menu th
   text-align: right
@@ -150,7 +152,7 @@
   color: #fff
   padding: 7px 10px 10px
   text-align: left
-  width: auto
+  width: 100%
 
 .dynamic_menu th a,
 .dynamic_menu td a
