--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -29,7 +29,7 @@ p
   margin: 0 0 0 290px
 
 .intro-forkids
-  margin: -5px 0 0 425px
+  margin: -5px 0 0 405px
 
 .intro-for,
 .intro-kids
@@ -52,7 +52,7 @@ p
   display: none
 
 .intro-help
-  margin: 20px 0 0 260px
+  margin: 20px 0 0 335px
   font-size: 26px
   width: 260px
 
@@ -308,7 +308,7 @@ p
     text-align: center
 
   .intro-forkids
-    margin: -2% 0 0 21%
+    margin: -2% 0 0 25%
 
   .intro-for,
   .intro-kids
@@ -475,6 +475,10 @@ p
     font-size: 18px
     display: block
     margin: 20px 0
+
+@media only screen and (max-width: 568px) and (min-width: 400px)
+  .intro-forkids
+    margin: -2% 0 0 35%  
 
 
 // !Retina stuff for hi-res dee-vices (Had to repeat this cuz desktop image would load in mobile)
