added max width qualifier to second portion of media query (fix Samsung galaxy/devices using min-resolution: 192dpi)

--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -512,7 +512,7 @@ p
 
 // !Retina stuff for hi-res dee-vices (Had to repeat this cuz desktop image would load in mobile)
 
-@media only screen and (max-width : 568px) and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
+@media only screen and (max-width : 568px) and (-webkit-min-device-pixel-ratio: 2), (max-width : 568px) and (min-resolution: 192dpi)
   .intro-help
     background: image-url("campaigns/kids/jesus@2x.png") no-repeat center top
     background-size: 568px 190px
