Hide inline comment form for Desktop - show it for Mobile (on moment detail pages)

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -203,6 +203,9 @@
   .moment-comments
     width: 87%
 
+  .moment-comments form
+    display: block  
+
   .moment-comments-list-text,
   .moment-comments-textarea
     width: 80%
