--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -453,6 +453,9 @@
   .moment-comments
     width: 90%
 
+  .moment-comments form
+    display: none
+    
   .moment-comments-list-text,
   .moment-comments-textarea
     width: 465px
