Remove likes from interface

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -101,6 +101,10 @@
 .moment-actions-comment a
   background-position: center -129px
 
+// !hide like action for now
+.moment-actions-like
+  display: none !important
+
 .moment-actions-like a
   background-position: center -36px
 
