Updating all user settings related pages to display properly using 'application' layout.

--- a/app/views/connections/index.html.haml
+++ b/app/views/connections/index.html.haml
@@ -6,5 +6,5 @@
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
-%article.profile
+%article
   = render partial: "connections/tabs"
