--- a/app/views/users/delete_account.html.haml
+++ b/app/views/users/delete_account.html.haml
@@ -1,15 +1,18 @@
 - @title = "#{t('users.edit account_existence')} | #{@user.name || @user.username}"
 
-%p= t('users.delete account description')
+- content_for :sidebar do
+  = render partial: "widgets/settings"
 
-= form_tag user_path(@user), method: :delete do
-  = render partial: "shared/form_errors", locals: {errors: @user.errors}
-  
-  %p
-    = label_tag :password, t("password prompt")
-    %br
-    = password_field_tag :password, params[:password], class: "autofocus"
-    %br
-    %span.small= link_to t('users.forgot password'), forgot_password_path
-  %p
-    = submit_tag t("users.delete account button"), class: "confirm action_button_red", "data-confirm-text" => t('users.yes delete')
+%article
+  %p= t('users.delete account description')
+  = form_tag user_path(@user), method: :delete do
+    = render partial: "shared/form_errors", locals: {errors: @user.errors}
+    
+    %p
+      = label_tag :password, t("password prompt")
+      %br
+      = password_field_tag :password, params[:password], class: "autofocus"
+      %br
+      %span.small= link_to t('users.forgot password'), forgot_password_path
+    %p
+      = submit_tag t("users.delete account button"), class: "confirm action_button_red", "data-confirm-text" => t('users.yes delete')
