--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -117,6 +117,7 @@
   height: 36px
   line-height: 34px
   background: image-url("social-actions-sprite.png") no-repeat 15px -313px
+  width: auto
 
 // !Comments attached to a moment
 
