fix mobile layout post bookmark.lib add

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -10,14 +10,18 @@
   overflow: hidden
   padding-left: 5px
 
+#main article.social-feed,
+#main div.social-feed
+  width: auto 
+
 // !-------------------- Feed -------------------------
 
 // !Moment containers
 
 .moment
-  margin: 0 15px 15px 0
-  width: 445px
-  float: left
+  margin: 0 15px 15px 0 
+  width: 100%
+  float: none
 
 .moment:nth-child(2n)
   margin-right: 0
@@ -31,7 +35,7 @@
 
 .moment-actions
   overflow: hidden
-  width: 445px
+  width: 100%
   background: #fff
   +border-radius(0 0 4px 4px)
   margin-bottom: 1px
