Initial friend requests and a system moment.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -57,6 +57,14 @@
     background: #fff
     display: none
     opacity: 0
+    -moz-box-shadow: 0px 0px 8px #222
+    -webkit-box-shadow: 0px 0px 8px #222
+    box-shadow: 0px 0px 8px #222
+
+    .action_button_green,
+    .action_button_grey
+      font-weight: normal !important
+
 
     ul
       margin-bottom: 0px
@@ -106,7 +114,7 @@
 
       .item-content
         float: left
-        min-width: 280px
+        min-width: 250px
 
         img
           height: 48px
@@ -132,7 +140,7 @@
 
       .item-actions
         float: right
-        min-width: 50px
+        min-width: 80px
         margin-left: 20px
 
         .action_button_green
