--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -228,7 +228,8 @@
 .moment-bdg,
 .moment-vid,
 .moment-no,
-.moment-vod
+.moment-vod,
+.moment-sys,
   position: relative
   padding: 15px
   overflow: hidden
@@ -243,7 +244,8 @@
 .moment-dl-text,
 .moment-no-text,
 .moment-bdg-text,
-.moment-vid-text
+.moment-vid-text,
+.moment-sys-text
   font-size: 16px
   float: left
   width: 300px
