--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -120,7 +120,8 @@
 .moment-dl-text,
 .moment-no-text,
 .moment-bdg-text,
-.moment-vid-text
+.moment-vid-text,
+.moment-sys-text
   width: 70%
   line-height: 1.3em
 
@@ -221,7 +222,8 @@
   .moment-dl-text,
   .moment-no-text,
   .moment-bdg-text,
-  .moment-vid-text
+  .moment-vid-text,
+  .moment-sys-text
     width: 78%
 
 // !Sidebar comment input
