hide show comments for social feed

--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -33,6 +33,7 @@
         %p.profile-hdr-info-about
           = @user.bio
 
+    #toggle_comments.float_right
     %ul.header_tabs
       %li.profile
         %a{href: user_path(@user)}
