--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -10,10 +10,11 @@
         = image_tag md_avatar.url
       %p.moment-bm-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
-      %br 
-      - moment.references.each do |ref|
-        %p.moment-verse{"data-usfm" => ref.usfm, "data-version-id" => ref.version_id }
-          = "#{ref.human}(#{ref.usfm})"
+      %br
+      - if moment.references.present?
+        - moment.references.each do |ref|
+          %p.moment-verse{"data-usfm" => ref.usfm, "data-version-id" => ref.version_id }
+            = "#{ref.human}(#{ref.usfm})"
 
       - if moment.labels.present?
         %p.moment-bm-labels
