--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -17,10 +17,10 @@
   width: 905px
 
 #toggle_comments
-  padding: 10px 15px  
+  padding: 10px 15px
   cursor: pointer
 
-#toggle_comments:after  
+#toggle_comments:after
   content: 'hide comments'
 
 #toggle_comments.closed:after
@@ -33,7 +33,7 @@ body.transition .moment
   -webkit-transition: all 0.3s ease-out
   -moz-transition: all 0.3s ease-out
   -o-transition: all 0.3s ease-out
-  transition: all 0.3s ease-out 
+  transition: all 0.3s ease-out
 
 .moment
   margin: 0 15px 15px 0
@@ -60,7 +60,7 @@ body.transition .moment
 
 .moment-actions
   overflow: hidden
-  
+
   background: #fff
   +border-radius(0 0 4px 4px)
   margin-bottom: 1px
@@ -140,7 +140,7 @@ body.transition .moment
   width: 385px
   margin: 0 auto
   background-color: #fff
-  padding: 8px 10px 8px
+  padding: 9px 10px 8px
   clear: both
 
 // !Common comments code
@@ -162,9 +162,9 @@ body.transition .moment
   background-color: #fff
 
   img
-    +border-radius(24px)
-    width: 24px
-    height: 24px
+    +border-radius(32px)
+    width: 32px
+    height: 32px
 
 // !Specific comments code
 
@@ -266,7 +266,7 @@ body.transition .moment
   width: 300px
   padding: 5px 0 0 10px
   line-height: 1.4em
-  margin-bottom: 0
+  margin-bottom: 15px
 
 .moment-dl-text
   b
@@ -283,6 +283,8 @@ body.transition .moment
   margin: 4px 0
   padding: 10px 15px
   clear: both
+  background-color: #F5F4F3
+  +border-radius(5px)
 
   .verse > .label
     display: none !important
@@ -480,7 +482,7 @@ body.transition .moment
 
   .moment-comments form
     display: none
-    
+
   .moment-comments-list-text,
   .moment-comments-textarea
     width: 465px
