Updated VOD icons: missed the mobile bits

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -138,8 +138,15 @@
 
 #main article .moment-vod-verse,
 .moment-vod-verse
-  font: italic 24px "times new roman", times, serif
+  font: 24px "times new roman", times, serif
   width: 90%
+
+.moment-vod-title
+  font-size: 20px
+
+.moment-vod-list
+  clear: both
+  margin: 5px 0 0
 
 
 // !Note moment
