Updated art to brown Jesus. Fixed problem with retina desktops.

--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -505,14 +505,14 @@ p
     display: block
     margin: 20px 0
 
+  // !Retina stuff for hi-res dee-vices (Had to repeat this cuz desktop image would load in mobile)
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
+
+    .intro-help
+      background: image-url("campaigns/kids/jesus@2x.png") no-repeat center top
+      background-size: 480px 190px
+
 @media only screen and (max-width: 568px) and (min-width: 400px)
   .intro-forkids
-    margin: -2% 0 0 45%  
-
-
-// !Retina stuff for hi-res dee-vices (Had to repeat this cuz desktop image would load in mobile)
-
-@media only screen and (max-width : 568px) and (-webkit-min-device-pixel-ratio: 2), (max-width : 568px) and (min-resolution: 192dpi)
-  .intro-help
-    background: image-url("campaigns/kids/jesus@2x.png") no-repeat center top
-    background-size: 568px 190px
+    margin: -2% 0 0 45%
