Quick fixes for moments feed.

--- a/app/views/moments/_generic.html.haml
+++ b/app/views/moments/_generic.html.haml
@@ -4,7 +4,7 @@
     .moment-sys
       = image_tag "social-cap-bm.png", class: "moment-img"
       %p.moment-sys-text
-        = moment.title.html_safe if moment.title
+        This is a generic moment
 
   -# !share controls, dates, and comments
   .moment-btm
@@ -16,4 +16,3 @@
         <a href="#" title="Like this">Like</a>
 
       %span.moment-actions-time
-        = moment.created_dt
