Added icon for system moments

--- a/app/views/moments/_system.html.haml
+++ b/app/views/moments/_system.html.haml
@@ -2,7 +2,7 @@
   -# !the content of the moment
   .moment-top
     .moment-sys
-      = image_tag "social-cap-bm.png", class: "moment-img"
+      = image_tag "social-cap-sys.png", class: "moment-img"
       %p.moment-sys-text
         = moment.title.html_safe if moment.title
 
