hide share icon on moment cards

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -69,11 +69,8 @@
 
 // !Specific stuff for each action
 
-.moment-actions-share
-  width: 47px
-
 .moment-actions-share a
-  background-position: 20px 10px
+  background-position: center 10px
 
 .moment-actions-comment a
   background-position: center -129px
@@ -132,7 +129,8 @@
 // !Bookmark moment
 
 .moment-bm
-  max-height: none
+  max-height: 250px
+  overflow: hidden
 
 // !Verse of the day moment
 
