fix social mobile notification page display

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -12,6 +12,8 @@
     display: block
     float: right
     color: #ccc
+    min-width: 100px
+    padding-left: 10px
 
 .notifications-list
   border-top: 1px solid #ccc
