--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -246,6 +246,7 @@ body.transition .moment
 .moment-no,
 .moment-vod,
 .moment-sys,
+.moment-fr
   position: relative
   padding: 15px
   overflow: hidden
@@ -261,7 +262,8 @@ body.transition .moment
 .moment-no-text,
 .moment-bdg-text,
 .moment-vid-text,
-.moment-sys-text
+.moment-sys-text,
+.moment-fr-text
   font-size: 16px
   float: left
   width: 300px
@@ -446,24 +448,27 @@ body.transition .moment
 
 // !Friends moment
 
-.moment-friend-container
+.moment-fr-container
   position: relative
   overflow: hidden
   clear: both
 
-.moment-friend-box
+.moment-fr-text b
+  display: none
+
+.moment-fr-box
   width: 50%
   text-align: center
   float: left
   margin-bottom: 10px
 
-.moment-friend-avatar
+.moment-fr-avatar
   box-shadow: 0 1px 2px #bbb
   +border-radius(128px)
   position: relative
   z-index: 1
 
-.moment-friend-name
+.moment-fr-name
   display: block
   background-color: #EEEDEB
   padding: 5px 0 7px
@@ -474,7 +479,7 @@ body.transition .moment
   z-index: 2
   line-height: 1.2em
 
-.moment-friend-seemore
+.moment-fr-seemore
   display: block
   text-align: center
 
